latex2mmlc/src/snapshots/latex2mmlc__parse__tests__number_with_dot_at_end.snap
---
source: latex2mmlc/src/parse.rs
expression: 3.14.
---
[
  Number("3.14"),
  SingleLetterIdent('.', false),
]
