latex2mmlc/src/snapshots/latex2mmlc__parse__tests__number_with_spaces_in_text.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\text{1 2  3    4}"
---
[
  Text("1\u{a0}2\u{a0}3\u{a0}4"),
]
