latex2mmlc/src/snapshots/latex2mmlc__parse__tests__number_with_two_inner_dots.snap
---
source: latex2mmlc/src/parse.rs
expression: 3..14
---
[
  Number("3"),
  SingleLetterIdent('.', false),
  SingleLetterIdent('.', false),
  Number("14"),
]
