latex2mmlc/src/snapshots/latex2mmlc__parse__tests__operatorname_number.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\operatorname123"
---
[
  SingleLetterIdent('1', true),
  Number("23"),
]
