latex2mmlc/src/snapshots/latex2mmlc__parse__tests__overset_digits.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\overset12"
---
[
  Overset(
    symbol: Number("1"),
    target: Number("2"),
  ),
]
