latex2mmlc/src/snapshots/latex2mmlc__parse__tests__pmod_subscript.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\pmod{3}_4"
---
[
  Subscript(
    target: CustomCmd(
      predefined: Row(
        nodes: [
          Space("1"),
          StretchableOp(ParenOp('(', false, Always), NoStretch),
          Text("mod"),
          Space("0.3333"),
          CustomCmdArg(0),
          StretchableOp(ParenOp(')', false, Always), NoStretch),
        ],
        style: None,
      ),
      args: [
        Number("3"),
      ],
    ),
    symbol: Number("4"),
  ),
]
