latex2mmlc/src/snapshots/latex2mmlc__parse__tests__scriptstyle_without_braces.snap
---
source: latex2mmlc/src/parse.rs
expression: "x\\scriptstyle y"
---
[
  SingleLetterIdent('x', false),
  Row(
    nodes: [
      SingleLetterIdent('y', false),
    ],
    attr: Style(ScriptStyle),
  ),
]
