latex2mmlc/src/snapshots/latex2mmlc__parse__tests__slightly_more_complex_fraction.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\frac{12}{5}"
---
[
  Frac(
    num: Number("12"),
    denom: Number("5"),
    lt: None,
    style: None,
  ),
]
