latex2mmlc/src/snapshots/latex2mmlc__parse__tests__sqrt_degree_and_number.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\sqrt[3]21"
---
[
  Root(Number("3"), Number("2")),
  Number("1"),
]
