latex2mmlc/src/snapshots/latex2mmlc__parse__tests__sqrt_number_with_dot.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\sqrt{4.}"
---
[
  Sqrt(Row(
    nodes: [
      Number("4"),
      SingleLetterIdent('.', false),
    ],
    style: None,
  )),
]
