latex2mmlc/src/snapshots/latex2mmlc__parse__tests__sqrt_subscript.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\sqrt x_i"
---
[
  Subscript(
    target: Sqrt(SingleLetterIdent('x', false)),
    symbol: SingleLetterIdent('i', false),
  ),
]
