latex2mmlc/src/snapshots/latex2mmlc__parse__tests__sqrt_subscript_and_degree.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\sqrt[3] x_i"
---
[
  Subscript(
    target: Root(Number("3"), SingleLetterIdent('x', false)),
    symbol: SingleLetterIdent('i', false),
  ),
]
